--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -2,8 +2,12 @@
 spring.datasource.url=jdbc:mysql://localhost:3306/social-media-database
 spring.datasource.username=social-media-user
 spring.datasource.password=dummypassword
+
 spring.jpa.defer-datasource-initialization=true
 spring.jpa.show-sql=true
+
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQLDialect
 
+spring.security.user.name=username
+spring.security.user.password=password
